# searx-randomizer

./: Cargo.toml  default.nix  engines.json  flake.nix
.github/workflows/: rust.yml
public/: index.html  style.css
src/: main.rs  util.rs
