[package]
name = "searx-randomizer"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rouille = "3.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
clap = { version = "4.5", features = ["derive", "env"] }


